experimental/parser/testdata/lexer/comments/unterminated.proto.stderr.txt
error: encountered unmatched `/*` delimiter
  --> testdata/lexer/comments/unterminated.proto:1:1
   | 
 1 | /*
   | ^^ expected a closing `*/`

encountered 1 error
